<resources>
    <!-- APP Labels -->
    <string name="app_name">ArkOperator</string>
    <string name="lblRefresh">Refresh</string>
    <string name="lblPassword">Password:</string>
    <string name="lblEnPass">Enter Password</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblValidate">Validate</string>
    <string name="lblConnect">Connect</string>
    <string name="lblConnecting">Connecting… Please wait…</string>
    <string name="lblValidating">Validating… Please wait…</string>
    <string name="lblUnknown" >Unknown</string>
    <string name="lblName">Name:</string>
    <string name="lblControl">control</string>
    <string name="lblModify">Modify</string>
    <string name="vessel_name">Vessel Name</string>
    <string name="operate">Operate</string>
    <string name="stop">Stop</string>

    <!-- Dashboard Labels -->
    <string name="lblConnected">• Connected</string>
    <string name="lblOnline">• Online</string>
    <string name="lblOffline">• Offline</string>
    <string name="lblDevice">Devices</string>

    <!-- Bluetooth Labels -->
    <string name="lblPairedDevices">Paired Devices</string>
    <string name="lblScanDevice">Scan Device</string>
    <string name="lblAvailableDevices">Available Devices</string>
    <string name="lblAuthBluetoothTitle">Vessel Authentication</string>
    <string name="lblBTAuthDescription">Enter Vessel key and password</string>
    <string name="lblKey">Key:</string>
    <string name="lblEnKey">Enter Key</string>

    <!-- Network Labels -->
    <string name="lblNetworkAuthTitle">Network Modification</string>
    <string name="lblNTAuthDescription">Enter Vessel SSID and password</string>
    <string name="lblSSID">SSID:</string>
    <string name="lblHintSSID">Enter SSID</string>
    <string name="lblAddDevice">Add Device</string>
    <string name="lblModifyNetwork"><u>Modify Network</u></string>
    <string name="lblVesselInformation">Vessel Information</string>
    <string name="lblNetworkName">Network:</string>
    <string name="lblIP">IP Address:</string>
    <string name="network">Network</string>
    <string name="settings">Settings</string>
    <string name="operations">Operations:</string>

    <!-- Controllers   -->
    <string name="lblCoordinates">Coordinates:</string>
    <string name="lblLongitude">longitude:</string>
    <string name="lblLatitude">Latitude:</string>
    <string name="lblPresDetection">Human Detected:</string>
    <string name="lblWaterLevel">Water Level:</string>
    <string name="lblUnknownNumber">0.0</string>
    <string name="lblNoDetect">No Human Detected</string>
    <string name="lblRight">Right</string>
    <string name="lblLeft">Right</string>
    <string name="lblFront">Front</string>
    <string name="battery">Battery:</string>
    <string name="zero_percent">0%</string>
</resources>