<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vesselDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bf_wave_left">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bltoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="Vessel Detail"
        app:subtitleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bltoolbar">

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cerapro_bold"
            android:gravity="center"
            android:text="@string/lblOffline"
            android:textColor="@color/danger"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVesselName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/cerapro_bold"
            android:gravity="center"
            android:text="@string/lblUnknown"
            android:textColor="@color/secondary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStatus" />

        <TextView
            android:id="@+id/txtNetworkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:text="@string/lblUnknown"
            android:textColor="@color/darkGray"
            android:textSize="15sp"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="@+id/txtVesselName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/txtVesselName"
            app:layout_constraintTop_toBottomOf="@+id/txtVesselName" />

        <TextView
            android:id="@+id/txtIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cerapro_medium"
            android:gravity="center"
            android:text="@string/lblUnknown"
            android:textColor="@color/darkGray"
            android:textSize="14sp"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="@+id/txtNetworkName"
            app:layout_constraintStart_toStartOf="@+id/txtNetworkName"
            app:layout_constraintTop_toBottomOf="@+id/txtNetworkName" />

        <Button
            android:id="@+id/btnOperate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/operate"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtIP"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtIP"
            app:layout_constraintTop_toBottomOf="@+id/txtIP" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/cerapro_bold"
        android:text="@string/operations"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/darkGray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>

